added the card flipping capability
Signed-off-by: John <politisj@gmail.com>

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
 		    	<li>Include some personal social media links so your users can learn about the developer behind the game - you!</li>
 			</ul>
 
-			<div>
+			<!-- <div class="board clearfix">
 				<img src="images/back.png" alt="Queen of Diamonds">
 				<img src="images/back.png" alt="Queen of Hearts">
 				<img src="images/back.png" alt="King of Diamonds">
 				<img src="images/back.png" alt="King of Hearts">
-			</div>
+			</div> -->
+    		
+    		<div id="game-board" class="board clearfix"></div>
+
 		</main>
 		<footer class="clearfix">
 			<p class="copyright">Copyright 2017</p>
